--- a/index.html
+++ b/index.html
@@ -30,136 +30,139 @@
           <h2 class="faq__heading">FAQs</h2>
         </div>
 
-        <div class="faq__item">
-          <h3 class="faq__title flex">
-            <button
-              class="faq__trigger flex"
-              id="faq1-button"
-              type="button"
-              aria-expanded="true"
-              aria-controls="faq1-panel"
-            >
-              <span class="faq__question"
-                >What is Frontend Mentor, and how will it help me?</span
+        <!-- Fix accessibility by using <ul> here in the accordion -->
+        <ul class="faq__list">
+          <li class="faq__item">
+            <h3 class="faq__title flex">
+              <button
+                class="faq__trigger flex"
+                id="faq1-button"
+                type="button"
+                aria-expanded="true"
+                aria-controls="faq1-panel"
               >
-              <img
-                src="assets/images/icon-minus.svg"
-                alt="Collapse section"
-                class="faq__icon"
-              />
-            </button>
-          </h3>
-          <div
-            id="faq1-panel"
-            class="faq__panel active"
-            role="region"
-            aria-labelledby="faq1-button"
-          >
-            <p class="faq__answer">
-              Frontend Mentor offers realistic coding challenges to help
-              developers improve their frontend coding skills with projects in
-              HTML, CSS, and JavaScript. It's suitable for all levels and ideal
-              for portfolio building.
-            </p>
-          </div>
-        </div>
-
-        <div class="faq__item">
-          <h3 class="faq__title flex">
-            <button
-              class="faq__trigger flex"
-              id="faq2-button"
-              type="button"
-              aria-expanded="false"
-              aria-controls="faq2-panel"
+                <span class="faq__question"
+                  >What is Frontend Mentor, and how will it help me?</span
+                >
+                <img
+                  src="assets/images/icon-minus.svg"
+                  alt="Collapse section"
+                  class="faq__icon"
+                />
+              </button>
+            </h3>
+            <div
+              id="faq1-panel"
+              class="faq__panel active"
+              role="region"
+              aria-labelledby="faq1-button"
             >
-              <span class="faq__question">Is Frontend Mentor free?</span>
-              <img
-                src="assets/images/icon-plus.svg"
-                alt="Expand section"
-                class="faq__icon"
-              />
-            </button>
-          </h3>
-          <div
-            id="faq2-panel"
-            class="faq__panel hidden"
-            role="region"
-            aria-labelledby="faq2-button"
-          >
-            <p class="faq__answer">
-              Yes, Frontend Mentor offers both free and premium coding
-              challenges, with the free option providing access to a range of
-              projects suitable for all skill levels.
-            </p>
-          </div>
-        </div>
+              <p class="faq__answer">
+                Frontend Mentor offers realistic coding challenges to help
+                developers improve their frontend coding skills with projects in
+                HTML, CSS, and JavaScript. It's suitable for all levels and
+                ideal for portfolio building.
+              </p>
+            </div>
+          </li>
 
-        <div class="faq__item">
-          <h3 class="faq__title flex">
-            <button
-              class="faq__trigger flex"
-              id="faq3-button"
-              type="button"
-              aria-expanded="false"
-              aria-controls="faq3-panel"
-            >
-              <span class="faq__question"
-                >Can I use Frontend Mentor projects in my portfolio?</span
+          <li class="faq__item">
+            <h3 class="faq__title flex">
+              <button
+                class="faq__trigger flex"
+                id="faq2-button"
+                type="button"
+                aria-expanded="false"
+                aria-controls="faq2-panel"
               >
-              <img
-                src="assets/images/icon-plus.svg"
-                alt="Expand section"
-                class="faq__icon"
-              />
-            </button>
-          </h3>
-          <div
-            id="faq3-panel"
-            class="faq__panel hidden"
-            role="region"
-            aria-labelledby="faq3-button"
-          >
-            <p class="faq__answer">
-              Yes, you can use projects completed on Frontend Mentor in your
-              portfolio. It's an excellent way to showcase your skills to
-              potential employers!
-            </p>
-          </div>
-        </div>
-
-        <div class="faq__item">
-          <h3 class="faq__title flex">
-            <button
-              class="faq__trigger flex"
-              id="faq4-button"
-              type="button"
-              aria-expanded="false"
-              aria-controls="faq4-panel"
+                <span class="faq__question">Is Frontend Mentor free?</span>
+                <img
+                  src="assets/images/icon-plus.svg"
+                  alt="Expand section"
+                  class="faq__icon"
+                />
+              </button>
+            </h3>
+            <div
+              id="faq2-panel"
+              class="faq__panel hidden"
+              role="region"
+              aria-labelledby="faq2-button"
             >
-              <span class="faq__question"
-                >How can I get help if I’m stuck on a challenge?</span
+              <p class="faq__answer">
+                Yes, Frontend Mentor offers both free and premium coding
+                challenges, with the free option providing access to a range of
+                projects suitable for all skill levels.
+              </p>
+            </div>
+          </li>
+
+          <li class="faq__item">
+            <h3 class="faq__title flex">
+              <button
+                class="faq__trigger flex"
+                id="faq3-button"
+                type="button"
+                aria-expanded="false"
+                aria-controls="faq3-panel"
               >
-              <img
-                src="assets/images/icon-plus.svg"
-                alt="Expand section"
-                class="faq__icon"
-              />
-            </button>
-          </h3>
-          <div
-            id="faq4-panel"
-            class="faq__panel hidden"
-            role="region"
-            aria-labelledby="faq4-button"
-          >
-            <p class="faq__answer">
-              The best place to get help is inside Frontend Mentor's Discord
-              community. There's a help channel where you can ask questions and
-              seek support from other community members.
-            </p>
-          </div>
-        </div>
+                <span class="faq__question"
+                  >Can I use Frontend Mentor projects in my portfolio?</span
+                >
+                <img
+                  src="assets/images/icon-plus.svg"
+                  alt="Expand section"
+                  class="faq__icon"
+                />
+              </button>
+            </h3>
+            <div
+              id="faq3-panel"
+              class="faq__panel hidden"
+              role="region"
+              aria-labelledby="faq3-button"
+            >
+              <p class="faq__answer">
+                Yes, you can use projects completed on Frontend Mentor in your
+                portfolio. It's an excellent way to showcase your skills to
+                potential employers!
+              </p>
+            </div>
+          </li>
+
+          <li class="faq__item">
+            <h3 class="faq__title flex">
+              <button
+                class="faq__trigger flex"
+                id="faq4-button"
+                type="button"
+                aria-expanded="false"
+                aria-controls="faq4-panel"
+              >
+                <span class="faq__question"
+                  >How can I get help if I’m stuck on a challenge?</span
+                >
+                <img
+                  src="assets/images/icon-plus.svg"
+                  alt="Expand section"
+                  class="faq__icon"
+                />
+              </button>
+            </h3>
+            <div
+              id="faq4-panel"
+              class="faq__panel hidden"
+              role="region"
+              aria-labelledby="faq4-button"
+            >
+              <p class="faq__answer">
+                The best place to get help is inside Frontend Mentor's Discord
+                community. There's a help channel where you can ask questions
+                and seek support from other community members.
+              </p>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
